--- a/first.ipynb
+++ b/first.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "3b4c42ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hi \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "6b43f35c",
    "metadata": {},
