my first committed file

--- a/first.ipynb
+++ b/first.ipynb
@@ -28,13 +28,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
       "hello world\n"
      ]
     }
    ],
    "source": [
+    "print(\"hello world\")\n",
+    "print(\"hello world\")\n",
+    "print(\"hello world\")\n",
     "print(\"hello world\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f4598a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
